Basic part has been done